fixed vertical icon alignment

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -35,6 +35,10 @@
     height: 100%;
   }
 
+  mat-icon{
+    height: 36px;
+  }
+
 
 
   
